--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#E0E0E0"
-    tools:context="com.google.firebase.example.fireeats.MainActivity">
+    tools:context="com.tysonfrederick.storyteller.MainActivity">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
