--- a/app/src/main/res/layout/activity_restaurant_detail.xml
+++ b/app/src/main/res/layout/activity_restaurant_detail.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#E0E0E0"
-    tools:context="com.google.firebase.example.fireeats.RestaurantDetailActivity">
+    tools:context="com.tysonfrederick.storyteller.RestaurantDetailActivity">
 
     <RelativeLayout
         android:id="@+id/restaurant_top_card"
